--- a/src/pug/mixins/Variables.pug
+++ b/src/pug/mixins/Variables.pug
@@ -12,12 +12,28 @@ append variables
   - 
     var data = [
       {
-      title: 'Materio',
-      link: 'https://themewagon.com/themes/free-responsive-mui-react-nextjs-admin-dashboard-template-materio/',
-      preview: 'https://demos.themeselection.com/materio-mui-react-nextjs-admin-template-free/',
-      img: 'img01.png',
-      item: 'admin',
-      category: 'Admin & DashBoard'
+        title: 'Cycle',
+        link: 'https://themewagon.com/themes/cycle/',
+        preview: 'https://themewagon.github.io/Cycle/',
+        img: 'img95.png',
+        item: 'miscellaneous',
+        category: 'Miscellaneous'
+      },
+      {
+        title: 'Motto',
+        link: 'https://themewagon.com/themes/motto-free-responsive-bootstrap-landing-page-template/',
+        preview: 'https://themewagon.github.io/motto/',
+        img: 'img58.png',
+        item: 'landing',
+        category: 'Landing Pages'
+      },
+      {
+        title: 'Productly',
+        link: 'https://themewagon.com/themes/free-responsive-html5-bootstrap-5-ecommerce-website-template-productly/',
+        preview: 'https://themewagon.github.io/productly/v1.0.0/',
+        img: 'img19.png',
+        item: 'miscellaneous',
+        category: 'Miscellaneous'
       },
       {
         title: 'Woody ',
@@ -26,7 +42,24 @@ append variables
         img: 'img02.png',
         item: 'business',
         category: 'Business'
-    },
+      },
+      {
+        title: 'Festava Live',
+        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-landing-page-template-festavelive/',
+        preview: 'https://themewagon.github.io/FestavaLive/',
+        img: 'img83.png',
+        item: 'landing',
+        category: 'Landing Page'
+      },
+      {
+      title: 'Materio',
+      link: 'https://themewagon.com/themes/free-responsive-mui-react-nextjs-admin-dashboard-template-materio/',
+      preview: 'https://demos.themeselection.com/materio-mui-react-nextjs-admin-template-free/',
+      img: 'img01.png',
+      item: 'admin',
+      category: 'Admin & DashBoard'
+      },
+      
      {
         title: 'Makan',
         link: 'https://themewagon.com/themes/makan-free-responsive-bootstrap-5-html5-business-website-template/',
@@ -50,30 +83,6 @@ append variables
       img: 'img05.png',
       item: 'travel',
       category: 'Travel & Booking'
-      },
-      {
-        title: 'FitApp',
-        link: 'https://themewagon.com/themes/responsive-free-bootsrap5-html5-landing-page-template-fitapp/',
-        preview: 'https://themewagon.github.io/FitApp/',
-        img: 'img06.png',
-        item: 'landing',
-        category: 'Landing Pages'
-      },
-       {
-      title: 'Klinik',
-      link: 'https://themewagon.com/themes/responsive-free-html5-bootstrap-4-medical-website-template-klinik/',
-      preview: 'https://themewagon.github.io/klinik/',
-      img: 'img07.png',
-      item: 'medical',
-      category: 'Medical & Health Care'
-      },
-      {
-        title: 'GreenHost',
-        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-web-hosting-template-greenhost/',
-        preview: 'https://themewagon.github.io/greenhost/',
-        img: 'img08.png',
-        item: 'miscellaneous',
-        category: 'Miscellaneous'
       },
       {
         title: 'EduWell',
@@ -188,14 +197,6 @@ append variables
         img: 'img20.png',
         item: 'food',
         category: 'Food & Restaurant'
-      },
-      {
-        title: 'Productly',
-        link: 'https://themewagon.com/themes/free-responsive-html5-bootstrap-5-ecommerce-website-template-productly/',
-        preview: 'https://themewagon.github.io/productly/v1.0.0/',
-        img: 'img19.png',
-        item: 'miscellaneous',
-        category: 'Miscellaneous'
       },
       {
         title: 'WeBuild ',
@@ -658,14 +659,6 @@ append variables
         category: 'Food & Restaurant'
       },
       {
-        title: 'Festava Live',
-        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-landing-page-template-festavelive/',
-        preview: 'https://themewagon.github.io/FestavaLive/',
-        img: 'img83.png',
-        item: 'landing',
-        category: 'Landing Page'
-      },
-      {
         title: 'Fruitkha',
         link: 'https://themewagon.com/themes/fruitkha-free-bootstrap-4-responsive-food-business-template/',
         preview: 'https://themewagon.github.io/fruitkha/',
@@ -754,6 +747,14 @@ append variables
         category: 'Educational'
       },
       {
+        title: 'GreenHost',
+        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-web-hosting-template-greenhost/',
+        preview: 'https://themewagon.github.io/greenhost/',
+        img: 'img08.png',
+        item: 'miscellaneous',
+        category: 'Miscellaneous'
+      },
+      {
         title: 'Studio',
         link: 'https://themewagon.com/themes/free-bootstrap-photography-template-studio/',
         preview: 'https://technext.github.io/studio/',
@@ -762,12 +763,12 @@ append variables
         category: 'Portfolio & Photography'
       },
       {
-        title: 'Cycle',
-        link: 'https://themewagon.com/themes/cycle/',
-        preview: 'https://themewagon.github.io/Cycle/',
-        img: 'img95.png',
-        item: 'miscellaneous',
-        category: 'Miscellaneous'
+      title: 'Klinik',
+      link: 'https://themewagon.com/themes/responsive-free-html5-bootstrap-4-medical-website-template-klinik/',
+      preview: 'https://themewagon.github.io/klinik/',
+      img: 'img07.png',
+      item: 'medical',
+      category: 'Medical & Health Care'
       },
       {
         title: 'GrowMark',
@@ -776,6 +777,14 @@ append variables
         img: 'img92.png',
         item: 'agency',
         category: 'Agency'
+      },
+      {
+        title: 'FitApp',
+        link: 'https://themewagon.com/themes/responsive-free-bootsrap5-html5-landing-page-template-fitapp/',
+        preview: 'https://themewagon.github.io/FitApp/',
+        img: 'img06.png',
+        item: 'landing',
+        category: 'Landing Pages'
       },
       {
         title: 'PodTalk',
