--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -28,7 +28,7 @@ mixin HeroHeader
           span.text-info.fw-bold
            |2023
 
-        a.text-white.btn.btn-success.mt-3.mt-lg-6.mb-5.font-nunito.fw-normal
+        a(href="https://themewagon.com/" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.mb-5.font-nunito.fw-normal
           i.fas.fa-download.me-3
           |Download Free(25mb)
 
