--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -25,7 +25,7 @@ mixin PreFooter
       p.text-white.fw-thin 
         |Get the entire collection in your box
 
-      a.text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
+      a(href="https://themewagon.com/" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
         i.fas.fa-download.me-3.font-nunito.fw-normal
         |Download Free(25mb)
       p.mb-0.text-white.mt-6.fs--1
