download link added

--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -25,9 +25,9 @@ mixin PreFooter
       p.text-white.fw-thin 
         |Get the entire collection in your box
 
-      a(href="https://themewagon.com/" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
+      a(href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
         i.fas.fa-download.me-3.font-nunito.fw-normal
-        |Download Free(25mb)
+        |Download Free(566mb)
       p.mb-0.text-white.mt-6.fs--1
         |Made with
         span.text-white.fas.fa-heart.mx-1
