--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -28,9 +28,9 @@ mixin HeroHeader
           span.text-info.fw-bold
            |2023
 
-        a(href="https://themewagon.com/" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.mb-5.font-nunito.fw-normal
+        a(href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.mb-5.font-nunito.fw-normal
           i.fas.fa-download.me-3
-          |Download Free(25mb)
+          |Download Free(566mb)
 
 
 
