--- a/src/scss/theme/helpers/_text.scss
+++ b/src/scss/theme/helpers/_text.scss
@@ -60,7 +60,7 @@
   font-family: 'Big Shoulders Display', cursive;
 }
 .title-100{
-  background: url('/assets/img/text-bg.png') no-repeat, linear-gradient(117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
+  background: url('../img/text-bg.png') no-repeat, linear-gradient(117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   line-height: 300px;
