Update google font

--- a/src/pug/layouts/LayoutTheme.pug
+++ b/src/pug/layouts/LayoutTheme.pug
@@ -11,7 +11,7 @@ prepend scripts
   script(src=`${CWD}vendors/isotope-packery/packery-mode.pkgd.min.js`)
 
 
-append footerStyles
+prepend styles
   link(rel='preconnect' href='https://fonts.googleapis.com')
   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
   link(href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;600;700&family=Volkhov:wght@700&display=swap" rel="stylesheet")
