--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -21,17 +21,16 @@ mixin HeroHeader
     +Background(background)
       .container.overflow-hidden.text-center.pb-9.z-index-1(style="padding-top: 105px;")
         img(src=`${CWD}assets/img/hero/final.png`  alt="" width="179.39px").mb-6
-        h1.d-flex.text-white.text-uppdercase.font-big-shoulders.align-items-center.justify-content-center
-         span.title-100.me-2(style="font-size: 336px") 100
-         span.title-text.ms-1(style="font-size: 140px")
+        h1.mb-3.d-flex.flex-column.flex-sm-row.text-white.text-uppdercase.font-big-shoulders.align-items-center.justify-content-center.hero-title
+         span.title-100.me-2.mb-3.mb-sm-0 100
+         span.title-text.ms-1
           span.d-block Pre-Build
           span.d-block Websites
 
         //- img(src=`${CWD}assets/img/hero/100.png`  alt="" width="901px" position="relative")
-        p.text-white.fw-semi-bold.fs-11.font-nunito.d-flex.justify-content-center.me-n3
-          |HTML5 template collection 
-          span.text-info.fw-bold.ms-2
-           |2023
+        p.text-white.fw-semi-bold.fs-6.fs-sm-8.fs-lg-11.font-nunito
+          | HTML5 template collection 
+          span.text-info.fw-bold.ms-2 2023
 
         a(href="https://github.com/themewagon/Bundle-2023/archive/refs/tags/v1.0.0.zip" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.mb-5.font-nunito.fw-normal
           i.fas.fa-download.me-3
