--- a/src/scss/theme/helpers/_text.scss
+++ b/src/scss/theme/helpers/_text.scss
@@ -59,13 +59,21 @@
 .font-big-shoulders{
   font-family: 'Big Shoulders Display', cursive;
 }
-.title-100{
-  background: url('../img/text-bg.png') no-repeat, linear-gradient(117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  line-height: 300px;
-  background-position: 0% 120%;
-}
-.title-text{
-  line-height: 1;
+.hero-title {
+  .title-100{
+    background: url('../img/text-bg.png') no-repeat, linear-gradient(117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-position: 0% 120%;
+    background-size: cover;
+    font-size: clamp(150px, 30vw, 336px);
+
+    @include media-breakpoint-up(md){
+      line-height: 300px;
+    }
+  }
+  .title-text{
+    line-height: 1;
+    font-size: clamp(80px, 12vw, 140px);
+  }
 }
