--- a/v1.0.0/assets/css/theme-rtl.css
+++ b/v1.0.0/assets/css/theme-rtl.css
@@ -18700,17 +18700,25 @@ iframe {
   font-family: 'Big Shoulders Display', cursive;
 }
 
-.title-100 {
+.hero-title .title-100 {
   background: url("../img/text-bg.png") no-repeat, -o-linear-gradient(-332.1deg, #1BADFF 9.45%, #25E4CD 93.89%);
   background: url("../img/text-bg.png") no-repeat, linear-gradient(-117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  line-height: 300px;
   background-position: 100% 120%;
+  background-size: cover;
+  font-size: clamp(150px, 30vw, 336px);
 }
 
-.title-text {
+@media (min-width: 768px) {
+  .hero-title .title-100 {
+    line-height: 300px;
+  }
+}
+
+.hero-title .title-text {
   line-height: 1;
+  font-size: clamp(80px, 12vw, 140px);
 }
 
 /*-----------------------------------------------
