--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -23,12 +23,12 @@ mixin HeroHeader
         img(src=`${CWD}assets/img/hero/final.png`  alt="" width="179.39px").mb-6
         h1.mb-0.d-flex.flex-column.flex-sm-row.text-white.text-uppercase.font-big-shoulders.align-items-center.justify-content-center.hero-title
          span.title-100.me-2.mb-3.mb-sm-0 100
-         span.title-text.ms-1
+         span.title-text
           span.d-block Pre-Build
-          span.d-block Websites
+          span.d-block.font-size(style="font-size: 147px;") Websites
 
         //- img(src=`${CWD}assets/img/hero/100.png`  alt="" width="901px" position="relative")
-        p.text-white.fw-semi-bold.fs-6.fs-sm-8.fs-lg-11.lh-1.font-nunito
+        p.text-white.fw-semi-bold.fs-6.fs-sm-8.fs-lg-11.lh-1.font-nunito.me-n3
           | HTML5 template collection 
           span.text-info.fw-bold.ms-2 2023
 
