responsive-pre-final

--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -19366,6 +19366,16 @@ iframe {
   box-shadow: 0 6.25rem 5rem 0 rgba(0, 0, 0, 0.02), 0 4.05063rem 2.92813rem 0 rgba(0, 0, 0, 0.0152), 0 2.4075rem 1.5925rem 0 rgba(0, 0, 0, 0.0121), 0 1.25rem 0.8125rem 0 rgba(0, 0, 0, 0.01), 0 0.50938rem 0.4075rem 0 rgba(0, 0, 0, 0.0079), 0 0.11563rem 0.19687rem 0 rgba(0, 0, 0, 0.0048);
 }
 
+.banner-section {
+  padding-top: 80px;
+}
+
+@media (min-width: 992px) {
+  .banner-section {
+    padding-top: 105px;
+  }
+}
+
 .round-btn-lg {
   height: 3.25rem;
   width: 3.25rem;
