--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -19,16 +19,17 @@ append variables
 mixin HeroHeader
   +Section(gradient,"container-fluid ").py-0.overflow-hidden
     +Background(background)
-      .container.overflow-hidden.text-center.pb-9.z-index-1(style="padding-top: 105px;")
-        img(src=`${CWD}assets/img/hero/final.png`  alt="" width="179.39px").mb-6
-        h1.mb-0.d-flex.flex-column.flex-sm-row.text-white.text-uppercase.font-big-shoulders.align-items-center.justify-content-center.hero-title
+      .container.overflow-hidden.text-center.pb-9.z-index-1.banner-section
+        img(src=`${CWD}assets/img/hero/final.png`  alt="" width="179.39px").mb-4.mb-lg-6
+        h1.mb-0.flex-column.flex-sm-row.text-white.text-uppercase.font-big-shoulders.align-items-center.justify-content-center.hero-title.d-none.d-lg-flex
          span.title-100.me-2.mb-3.mb-sm-0 100
          span.title-text
           span.d-block Pre-Build
           span.d-block.font-size(style="font-size: 147px;") Websites
+        h1.text-white.text-uppercase.fs-8.d-lg-none.font-big-shoulders.fw-black.fs-sm-10 100 Pre-build Websites
 
         //- img(src=`${CWD}assets/img/hero/100.png`  alt="" width="901px" position="relative")
-        p.text-white.fw-semi-bold.fs-6.fs-sm-8.fs-lg-11.lh-1.font-nunito.me-n3
+        p.text-white.fw-semi-bold.fs-5.fs-sm-6.fs-lg-11.lh-1.font-nunito.me-n3
           | HTML5 template collection 
           span.text-info.fw-bold.ms-2 2023
 
