--- a/src/scss/theme/_mixed.scss
+++ b/src/scss/theme/_mixed.scss
@@ -179,3 +179,11 @@
     box-shadow: $box-shadow;
   }
 }
+
+.banner-section{
+  padding-top: 80px;
+  @include media-breakpoint-up(lg){
+    padding-top: 105px;
+  }
+
+}
