--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -25,11 +25,12 @@ mixin HeroHeader
          span.title-100.me-2.mb-3.mb-sm-0 100
          span.title-text
           span.d-block Pre-Build
-          span.d-block.font-size(style="font-size: 147px;") Websites
+          span.title-text-2 
+           span.d-block Websites
         h1.text-white.text-uppercase.fs-8.d-lg-none.font-big-shoulders.fw-black.fs-sm-10 100 Pre-build Websites
 
         //- img(src=`${CWD}assets/img/hero/100.png`  alt="" width="901px" position="relative")
-        p.text-white.fw-semi-bold.fs-5.fs-sm-6.fs-lg-11.lh-1.font-nunito.me-n3
+        p.text-white.fw-semi-bold.fs-5.fs-sm-6.fs-lg-9.fs-xl-11.lh-1.font-nunito.me-n3
           | HTML5 template collection 
           span.text-info.fw-bold.ms-2 2023
 
