--- a/src/scss/theme/helpers/_text.scss
+++ b/src/scss/theme/helpers/_text.scss
@@ -64,15 +64,37 @@
     background: url('../img/text-bg.png') no-repeat, linear-gradient(117.9deg, #1BADFF 9.45%, #25E4CD 93.89%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 334px;
 
     @include media-breakpoint-up(md){
       line-height: 288px;
     }
+    @include media-breakpoint-up(lg){
+      font-size: 259px;
+      line-height: 220px;
+
+    }
+    @include media-breakpoint-up(xl){
+      font-size: 334px;
+      line-height: 288px;
+    }
   }
   .title-text{
-    line-height: 1;
+
+    @include media-breakpoint-up(lg){
+      font-size: 100px;
+    }
+    @include media-breakpoint-up(xl){
+      line-height: 1;
     //font-size: clamp(80px, 12vw, 140px);
-    font-size: 139px;
+      font-size: 139px;
+    }
+  }
+  .title-text-2{
+    @include media-breakpoint-up(lg){
+      font-size: 105px;
+    }
+    @include media-breakpoint-up(xl){
+      font-size: 147px;
+    }
   }
 }
