--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,6 +15,6 @@ append content
 
   +HeroHeader
   +Section("container-fluid px-5").py-0
-    //+NavbarShowcase
-    //+Item
-  //+PreFooter
+    +NavbarShowcase
+    +Item
+  +PreFooter
