--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -25,9 +25,9 @@ mixin PreFooter
       p.text-white.fw-thin 
         |Get the entire collection in your box
 
-      a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
-        i.fas.fa-download.me-3.font-nunito.fw-normal
-        |Download Free(566mb)
+      a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5.px-md-7.font-nunito
+        i.fas.fa-download.me-3
+        |Download FREE (566MB)
       p.mb-0.text-white.mt-6.fs--1
         |Made with
         span.text-white.fas.fa-heart.mx-1
