--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -24,19 +24,19 @@ mixin HeroHeader
         h1.mb-0.flex-column.flex-sm-row.text-white.text-uppercase.font-big-shoulders.align-items-center.justify-content-center.hero-title.d-none.d-lg-flex
          span.title-100.me-2.mb-3.mb-sm-0 100
          span.title-text
-          span.d-block Pre-Build
+          span.d-block Pre-Built
           span.title-text-2 
            span.d-block Websites
-        h1.text-white.text-uppercase.fs-8.d-lg-none.font-big-shoulders.fw-black.fs-sm-10 100 Pre-build Websites
+        h1.text-white.text-uppercase.fs-8.d-lg-none.font-big-shoulders.fw-black.fs-sm-10 100 Pre-built Websites
 
         //- img(src=`${CWD}assets/img/hero/100.png`  alt="" width="901px" position="relative")
-        p.text-white.fw-semi-bold.fs-5.fs-sm-6.fs-lg-9.fs-xl-11.lh-1.font-nunito.me-n3
-          | HTML5 template collection 
+        p.text-white.fw-semi-bold.lh-1.font-nunito.me-n3.sub-title
+          | HTML5 template collection
           span.text-info.fw-bold.ms-2 2023
 
-        a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.font-nunito.fw-normal
+        a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.font-nunito.fw-normal.px-md-7
           i.fas.fa-download.me-3
-          |Download Free(566mb)
+          |Download FREE (566MB)
 
 
 
