--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -25,7 +25,7 @@ mixin PreFooter
       p.text-white.fw-thin 
         |Get the entire collection in your box
 
-      a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5.px-md-7.font-nunito
+      a(href="https://themewagon.com/themes/template-collection-2023-hundred-pre-built-websites-for-free/" target="_blank" ).text-white.btn.btn-success.mt-2.mt-lg-5.mb-5.px-md-7.font-nunito
         i.fas.fa-download.me-3
         |Download FREE (566MB)
       p.mb-0.text-white.mt-6.fs--1
