--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -34,7 +34,7 @@ mixin HeroHeader
           | HTML5 template collection
           span.text-info.fw-bold.ms-2 2023
 
-        a(href="https://github.com/themewagon/Bundle-2023/releases/download/v1.0.0/Free.Bundle.2023.zip" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.font-nunito.fw-normal.px-md-7
+        a(href="https://themewagon.com/themes/template-collection-2023-hundred-pre-built-websites-for-free/" target="_blank" ).text-white.btn.btn-success.mt-3.mt-lg-6.font-nunito.fw-normal.px-md-7
           i.fas.fa-download.me-3
           |Download FREE (566MB)
 
